- PR#6636: add --version option
  (whitequark)
- improve type-specialization of unapplied primitives
  (Frédéric Bour, review by Gabriel Scherer)
- PR#6737: fix Typedtree attributes on (fun x -> body) expressions
- PR#6679: fix pprintast printing of constraints in type declarations
- PR#6845: -no-check-prims to tell ocamlc not to check primitives in runtime
- PR#6943: native-code generator for POWER/PowerPC 64 bits, both in
  big-endian (ppc64) and little-endian (ppc64le) configuration.
  (Xavier Leroy, with inspiration from RedHat's unofficial ppc64 and ppc64le
   ports)
- PR#6979: better code generation in x86-32 backend for copying floats to
  the stack (Marc Lasson, review by Xavier Leroy)
- PR#7018: fix missing identifier renaming during inlining (Alain Frisch,
  review by Xavier Leroy)
- GPR#17: some cmm optimizations of integer operations with constants
  (Stephen Dolan, review by Pierre Chambart)
- GPR#109: new unboxing strategy for float and int references (Vladimir Brankov,
  review by Alain Frisch)
- GPR#107: Prevent more unnecessary float boxing, especially in `if` and `match`
  (Vladimir Brankov, review by Alain Frisch)
- GPR#115: More precise typing of values at the C-- and Mach level,.
  (Xavier Leroy, review by Pierre Chambart)
- GPR#207: Colors in compiler messages (warnings, errors)
  (Simon Cruanes, review by Gabriel Scherer)
- GPR#258: more precise information on PowerPC instruction sizes
  (Pierre Chambart, Xavier Leroy)
- PR#7022, GPR#259: unbox float and boxed ints earlier, avoid second pass
  (Alain Frisch)
- PR#7064, GPR#316: allowing to mark compilation units and sub-modules as
  deprecated (Alain Frisch)
- GPR#263: improve code generation for if-equivalents of (&&) and (||)
  (Pierre Chambart)
- GPR#271: Fix incorrect mutability flag when records are built using "with"
  (Mark Shinwell)
- GPR#270: Make [transl_exception_constructor] generate [Immutable] blocks
  (Mark Shinwell)